[tool.poetry]
name = "issue"
version = "0.1.0"
description = ""
authors = ["mehty <amsharifzad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
openai = "^0.27.8"
pyjwt = "^1.3.1"
streamlit = "^1.24.0"
pydantic = "^1.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

